--- a/docs/_includes/nav/component.html
+++ b/docs/_includes/nav/component.html
@@ -35,9 +35,22 @@
     </ul>
 </li>
 <li>
-    <a href="#tab">Content Tab</a>
+    <a href="#tabs">Tabs</a>
     <ul>
-        <li><a href="#tab-basic">Contoh Dasar</a></li>
+        <li><a href="#tabs-basic">Contoh Dasar</a></li>
+    </ul>
+</li>
+<li>
+    <a href="#carousel">Carousel</a>
+    <ul>
+        <li><a href="#carousel-basic">Contoh Dasar</a></li>
+        <li><a href="#carousel-dynamic">Dinamis</a></li>
+    </ul>
+</li>
+<li>
+    <a href="#collapse">Collapse</a>
+    <ul>
+        <li><a href="#collapse-basic">Contoh Dasar</a></li>
     </ul>
 </li>
 <li>
