--- a/less/components.less
+++ b/less/components.less
@@ -25,6 +25,7 @@
 @import "components/toast.less";
 @import "components/loading-bar.less";
 @import "components/pagination.less";
+@import "components/carousel.less";
 
 /**
  * Block
