--- a/less/variables.less
+++ b/less/variables.less
@@ -396,6 +396,21 @@
 @pagination-disabled-border:           lighten(@accent-muted, 20);
 
 /**
+ * Carousel
+ */
+@carousel-text-shadow:                        0 1px 2px rgba(0,0,0,.6);
+
+@carousel-control-color:                      @accent-light;
+@carousel-control-width:                      15%;
+@carousel-control-opacity:                    .5;
+@carousel-control-font-size:                  20px;
+
+@carousel-indicator-active-bg:                @accent-light;
+@carousel-indicator-border-color:             @accent-light;
+
+@carousel-caption-color:                      @accent-light;
+
+/**
  * Z-Index
  * ## z-index master control list
  */
