--- a/less/mixins.less
+++ b/less/mixins.less
@@ -12,6 +12,7 @@
 
 // Utilities
 @import 'mixins/tab-focus.less';
+@import 'mixins/component-animations.less';
 
 // CSS
 @import 'mixins/typography.less';
