--- a/docs/_includes/nav/component.html
+++ b/docs/_includes/nav/component.html
@@ -35,9 +35,35 @@
     </ul>
 </li>
 <li>
-    <a href="#tabs">Tabs</a>
+    <a href="#nav">Navigasi</a>
+    <ul>
+        <li><a href="#nav-tabs">Tab</a></li>
+        <li><a href="#nav-pills">Pill / Kotak</a></li>
+        <li><a href="#nav-justified">Rata Tengah</a></li>
+        <li><a href="#nav-dropdown">Ditambah Dropdown</a></li>
+    </ul>
+</li>
+<li>
+    <a href="#navbar">Navbar</a>
+    <ul>
+        <li><a href="#navbar-basic">Contoh Dasar</a></li>
+        <li><a href="#navbar-brand">Logo / Brand</a></li>
+        <li><a href="#navbar-form">Form</a></li>
+        <li><a href="#navbar-text">text</a></li>
+        <li><a href="#navbar-positioning">Varian Posisi</a></li>
+        <li><a href="#navbar-invert">Varian Aksen</a></li>
+    </ul>
+</li>
+<li>
+    <a href="#tabs">Tab Content</a>
     <ul>
         <li><a href="#tabs-basic">Contoh Dasar</a></li>
+    </ul>
+</li>
+<li>
+    <a href="#accordeon">Accordeon</a>
+    <ul>
+        <li><a href="#accordeon-basic">Contoh Dasar</a></li>
     </ul>
 </li>
 <li>
