--- a/less/components.less
+++ b/less/components.less
@@ -26,6 +26,8 @@
 @import "components/loading-bar.less";
 @import "components/pagination.less";
 @import "components/carousel.less";
+@import "components/navs.less";
+@import "components/navbar.less";
 
 /**
  * Block
