--- a/less/components/dropdown.less
+++ b/less/components/dropdown.less
@@ -15,8 +15,8 @@
   border-left:  @caret-width-base solid transparent;
 }
 
-ui-dropdown,
-.ui-dropdown {
+dropdown,
+.dropdown {
     position: relative;
     display: inline-block;
 
