--- a/docs/_includes/component/nav.html
+++ b/docs/_includes/component/nav.html
@@ -123,7 +123,7 @@
 </div>
 
 <!-- Contoh Dasar -->
-<h2 class="docs-subsection-title" id="nav- nav-stacked">Rata Tengah</h2>
+<h2 class="docs-subsection-title" id="nav-justified">Rata Tengah</h2>
 <div class="docs-subsection-desc">
     <p>Untuk beberapa keperluan, biasanya untuk kebutuhan tampilan yang responsive, kamu bisa mengatur tab supaya ukurannya sama mengikuti containernya dengan menambahkan kelas <code>.nav-justified</code>.</p>
 </div>
