--- a/docs/_includes/nav/component.html
+++ b/docs/_includes/nav/component.html
@@ -46,12 +46,11 @@
 <li>
     <a href="#navbar">Navbar</a>
     <ul>
-        <li><a href="#navbar-basic">Contoh Dasar</a></li>
+        <li><a href="#navbar-overview">Overview</a></li>
         <li><a href="#navbar-brand">Logo / Brand</a></li>
         <li><a href="#navbar-form">Form</a></li>
-        <li><a href="#navbar-text">text</a></li>
         <li><a href="#navbar-positioning">Varian Posisi</a></li>
-        <li><a href="#navbar-invert">Varian Aksen</a></li>
+        <li><a href="#navbar-invert">Versi Aksen Invert</a></li>
     </ul>
 </li>
 <li>
