--- a/docs/_includes/nav/component.html
+++ b/docs/_includes/nav/component.html
@@ -54,9 +54,9 @@
     </ul>
 </li>
 <li>
-    <a href="#tabs">Tab Content</a>
+    <a href="#tab">Tab Content</a>
     <ul>
-        <li><a href="#tabs-basic">Contoh Dasar</a></li>
+        <li><a href="#tab-basic">Penggunaan</a></li>
     </ul>
 </li>
 <li>
