--- a/docs/_includes/component/navbar.html
+++ b/docs/_includes/component/navbar.html
@@ -53,8 +53,8 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="">Link</a></li>
-        <li class="dropdown">
-          <a href="">Dropdown <span class="caret"></span></a>
+        <li class="dropdown" data-toggle-by-hover=true>
+          <a href="">Hover Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
@@ -109,8 +109,8 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="">Link</a></li>
-        <li class="dropdown">
-          <a href="">Dropdown <span class="caret"></span></a>
+        <li class="dropdown" data-toggle-by-hover=true>
+          <a href="">Hover Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
@@ -342,8 +342,8 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="">Link</a></li>
-        <li class="dropdown">
-          <a href="">Dropdown <span class="caret"></span></a>
+        <li class="dropdown" data-toggle-by-hover=true>
+          <a href="">Hover Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
