--- a/docs/_includes/component/tabs.html
+++ b/docs/_includes/component/tabs.html
@@ -1,5 +1,5 @@
 <h1 class="docs-section-title" id="tab">Content Tab</h1>
-<p class="docs-section-desc">simple tab, for those how want it</p>
+<p class="docs-section-desc">reinvent the tabs</p>
 
 <!-- Contoh Dasar -->
 <h2 class="docs-subsection-title" id="tab-basic">Contoh-contoh</h2>
