--- a/docs/_includes/nav/component.html
+++ b/docs/_includes/nav/component.html
@@ -15,6 +15,7 @@
         <li><a href="#form-input-tag">Input Tag</a></li>
         <li><a href="#form-input-upload">File Uploader</a></li>
         <li><a href="#form-input-auto-complete">Auto Complete</a></li>
+        <li><a href="#form-input-rating">Rating</a></li>
         <li><a href="#form-validation">Validasi</a></li>
         <li><a href="#form-filter">Form Filter</a></li>
     </ul>
